系统文件策略优化,新增文件夹创建和文件批量删除,同时完善文件下载流程,是否压缩下载